Add Memory management and Native access functionality
- Implemented a Memory class for managing an integer array with bounds checking.
- Created a NativeAccess class to interface with C libraries using JNA, allowing for native function calls.
- Added a sample assembly test file to demonstrate basic output and control flow.